Add Vixlet Brand Swatches

--- a/Swatches.sketchplugin/Contents/Resources/index.html
+++ b/Swatches.sketchplugin/Contents/Resources/index.html
@@ -6,9 +6,18 @@
 <meta name="Author" content="Ashung.hung@gmail.com">
 <link rel="stylesheet" href="assets/style.css">
 <script src="assets/jquery-3.1.1.min.js"></script>
+<script src="assets/tinycolor2.js"></script>
 <script src="assets/common.js"></script>
 <script src="swatches.js"></script>
 <script src="assets/list.min.js"></script>
+
+<script src="colors/vixlet/mlb_brand_colors.js"></script>
+<script src="colors/vixlet/atp_brand_colors.js"></script>
+<script src="colors/vixlet/slipknot_brand_colors.js"></script>
+<script src="colors/vixlet/lfc_brand_colors.js"></script>
+<script src="colors/vixlet/peshawar_brand_colors.js"></script>
+<script src="colors/vixlet/kanoo_brand_colors.js"></script>
+<script src="colors/vixlet/garantikoza_brand_colors.js"></script>
 
 <script src="colors/material_design_colors.js"></script>
 <script src="colors/ant_design_colors.js"></script>
